# Bakup-Agent-Cpp

./: .gitignore  .gitmodules  Agent.cpp  Agent.h  CHANGELOG.md  CMakeLists.txt  Command.cpp  Command.h  Debug.cpp  Debug.h  LICENSE  Network.cpp  Network.h  README.md  Request.cpp  Request.h  Response.cpp  Response.h  config.json.example  credentials.env.example  credentials.txt.example  development_setup.sh  install.sh  main.cpp  main.h  setup.sh  uninstall.sh  update.sh
.github/workflows/: buildandtest.yml
src/: Agent.cpp  Agent.h  CMakeLists.txt  Command.cpp  Command.h  Debug.cpp  Debug.h  Environment.cpp  Environment.h  Job.cpp  Job.h  RCloneVersionChecker.cpp  RCloneVersionChecker.h  Request.cpp  Request.h  Response.cpp  Response.h  ResponseBuilder.cpp  ResponseBuilder.h  SSLChecker.cpp  SSLChecker.h  main.cpp  main.h
tests/: AgentTest.cpp  CMakeLists.txt  CommandTest.cpp  DebugTest.cpp  JobTest.cpp  RCloneVersionCheckerTest.cpp  RequestTest.cpp  ResponseBuilderTest.cpp  ResponseTest.cpp
